--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-ipython
-pdbpp
-pytest
-pytest-stepwise
-pytest-watch
-python-dateutil
-requests-mock
+ipython==7.22.0
+pdbpp==0.10.2
+pytest==6.2.3
+pytest-stepwise==0.4
+pytest-watch==4.2.0
+python-dateutil==2.8.1
+requests-mock==1.8.0
 uvicorn==0.12.2
